--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -3648,24 +3648,7 @@
             - name: Riferimenti al linguaggio C++
               href: cpp/cpp-language-reference.md
             - name: C++ (C++ moderno)
-              expanded: false
-              items:
-                - name: C++ (C++ moderno)
-                  href: cpp/welcome-back-to-cpp-modern-cpp.md
-                - name: Inizializzazione uniforme e costruttori deleganti
-                  href: cpp/uniform-initialization-and-delegating-constructors.md
-                - name: Durata degli oggetti e gestione delle risorse (C++ moderno)
-                  href: cpp/object-lifetime-and-resource-management-modern-cpp.md
-                - name: Risorse proprie degli oggetti (RAII)
-                  href: cpp/objects-own-resources-raii.md
-                - name: Contenitori (C++ moderno)
-                  href: cpp/containers-modern-cpp.md
-                - name: Algoritmi (C++ moderno)
-                  href: cpp/algorithms-modern-cpp.md
-                - name: Formattazione di stringhe e I/O (C++ moderno)
-                  href: cpp/string-and-i-o-formatting-modern-cpp.md
-                - name: Portabilità in base ai limiti ABI (C++ moderno)
-                  href: cpp/portability-at-abi-boundaries-modern-cpp.md
+              href: cpp/welcome-back-to-cpp-modern-cpp.md
             - name: Convenzioni lessicali
               expanded: false
               items:
@@ -3807,46 +3790,55 @@
                   href: cpp/alignof-and-alignas-cpp.md
                 - name: 'Tipi semplici, tipi layout standard e tipi POD'
                   href: cpp/trivial-standard-layout-and-pod-types.md
-            - name: Tipi fondamentali
-              expanded: false
-              items:
-                - name: Tipi fondamentali
-                  href: cpp/fundamental-types-cpp.md
-                - name: Intervalli dei tipi di dati
-                  href: cpp/data-type-ranges.md
-                - name: nullptr
-                  href: cpp/nullptr.md
-                - name: void
-                  href: cpp/void-cpp.md
-                - name: bool
-                  href: cpp/bool-cpp.md
-                - name: false
-                  href: cpp/false-cpp.md
-                - name: true
-                  href: cpp/true-cpp.md
-                - name: 'char, wchar_t, char16_t, char32_t'
-                  href: cpp/char-wchar-t-char16-t-char32-t.md
-                - name: '__int8, __int16, __int32, __int64'
-                  href: cpp/int8-int16-int32-int64.md
-                - name: __m64
-                  href: cpp/m64.md
-                - name: __m128
-                  href: cpp/m128.md
-                - name: __m128d
-                  href: cpp/m128d.md
-                - name: __m128i
-                  href: cpp/m128i.md
-                - name: '__ptr32, __ptr64'
-                  href: cpp/ptr32-ptr64.md
-                - name: Limiti numerici
+                - name: Sistema di tipi
                   expanded: false
                   items:
-                    - name: Limiti numerici
-                      href: cpp/numerical-limits-cpp.md
-                    - name: Limiti per tipi Integer
-                      href: cpp/integer-limits.md
-                    - name: Limiti sulle costanti a virgola mobile
-                      href: cpp/floating-limits.md
+                    - name: Sistema di tipi
+                      href: cpp/cpp-type-system-modern-cpp.md
+                    - name: Tipi valore
+                      href: cpp/value-types-modern-cpp.md
+                    - name: Conversioni di tipi e indipendenza dai tipi
+                      href: cpp/type-conversions-and-type-safety-modern-cpp.md
+                    - name: Tipi fondamentali
+                      expanded: false
+                      items:
+                        - name: Tipi fondamentali
+                          href: cpp/fundamental-types-cpp.md
+                        - name: Intervalli dei tipi di dati
+                          href: cpp/data-type-ranges.md
+                        - name: nullptr
+                          href: cpp/nullptr.md
+                        - name: void
+                          href: cpp/void-cpp.md
+                        - name: bool
+                          href: cpp/bool-cpp.md
+                        - name: false
+                          href: cpp/false-cpp.md
+                        - name: true
+                          href: cpp/true-cpp.md
+                        - name: 'char, wchar_t, char16_t, char32_t'
+                          href: cpp/char-wchar-t-char16-t-char32-t.md
+                        - name: '__int8, __int16, __int32, __int64'
+                          href: cpp/int8-int16-int32-int64.md
+                        - name: __m64
+                          href: cpp/m64.md
+                        - name: __m128
+                          href: cpp/m128.md
+                        - name: __m128d
+                          href: cpp/m128d.md
+                        - name: __m128i
+                          href: cpp/m128i.md
+                        - name: '__ptr32, __ptr64'
+                          href: cpp/ptr32-ptr64.md
+                        - name: Limiti numerici
+                          expanded: false
+                          items:
+                            - name: Limiti numerici
+                              href: cpp/numerical-limits-cpp.md
+                            - name: Limiti per tipi Integer
+                              href: cpp/integer-limits.md
+                            - name: Limiti sulle costanti a virgola mobile
+                              href: cpp/floating-limits.md
                 - name: Conversioni standard
                   href: cpp/standard-conversions.md
                 - name: Conversioni di tipi e indipendenza dai tipi
@@ -4004,7 +3996,7 @@
                       href: cpp/if-exists-statement.md
                     - name: Istruzione __if_not_exists
                       href: cpp/if-not-exists-statement.md
-                    - name: istruzione switch
+                    - name: Istruzione switch
                       href: cpp/switch-statement-cpp.md
                 - name: Istruzioni di iterazione
                   expanded: false
@@ -4013,7 +4005,7 @@
                       href: cpp/iteration-statements-cpp.md
                     - name: Istruzione while
                       href: cpp/while-statement-cpp.md
-                    - name: Istruzione do-while
+                    - name: istruzione do-while
                       href: cpp/do-while-statement-cpp.md
                     - name: Istruzione for
                       href: cpp/for-statement-cpp.md
@@ -4107,6 +4099,12 @@
                       href: cpp/public-cpp.md
                 - name: Inizializzazione con parentesi graffe
                   href: cpp/initializing-classes-and-structs-without-constructors-cpp.md
+                - name: Durata degli oggetti e gestione delle risorse (RAII)
+                  href: cpp/object-lifetime-and-resource-management-modern-cpp.md
+                - name: Idioma Pimpl per l'incapsulamento in fase di compilazione
+                  href: cpp/pimpl-for-compile-time-encapsulation-modern-cpp.md
+                - name: Portabilità in base ai limiti ABI
+                  href: cpp/portability-at-abi-boundaries-modern-cpp.md
                 - name: Costruttori
                   expanded: false
                   items:
@@ -9788,8 +9786,10 @@
             - name: Programmazione iostream
               expanded: false
               items:
-                - name: Programmazione iostream
+                - name: programmazione di iostream
                   href: standard-library/iostream-programming.md
+                - name: Formattazione di stringhe e I/O
+                  href: text/string-and-i-o-formatting-modern-cpp.md
                 - name: Definizione di flusso
                   expanded: false
                   items:
