--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -692,6 +692,8 @@
                           href: build/reference/qifist-suppress-ftol.md
                         - name: /Qimprecise_fwaits (Rimuove comandi fwait all'interno dei blocchi try)
                           href: build/reference/qimprecise-fwaits-remove-fwaits-inside-try-blocks.md
+                        - name: /QIntel-jcc-erratum
+                          href: build/reference/qintel-jcc-erratum.md
                         - name: /Qpar (Parallelizzazione automatica)
                           href: build/reference/qpar-auto-parallelizer.md
                         - name: /Qvec-report (Livello di segnalazione parallelizzazione automatica)
